<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            tools:context="com.mozhimen.study_basic_unit2.TipCalculateActivity">

            <ImageView
                android:id="@+id/tip_icon_cost_of_service"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:importantForAccessibility="no"
                app:layout_constraintBottom_toBottomOf="@id/tip_cost_of_service"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/tip_cost_of_service"
                app:srcCompat="@drawable/ic_store" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tip_cost_of_service"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:hint="@string/please_input_cost"
                app:layout_constraintStart_toEndOf="@id/tip_icon_cost_of_service"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tip_cost_of_service_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal" />

            </com.google.android.material.textfield.TextInputLayout>

            <ImageView
                android:id="@+id/icon_service_question"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:importantForAccessibility="no"
                app:layout_constraintBottom_toBottomOf="@id/tip_service_question"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/tip_service_question"
                app:srcCompat="@drawable/ic_service" />

            <TextView
                android:id="@+id/tip_service_question"
                style="@style/Widget.Study_Android_Basic.TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/how_was_the_service"
                app:layout_constraintStart_toStartOf="@id/tip_cost_of_service"
                app:layout_constraintTop_toBottomOf="@id/tip_cost_of_service" />

            <RadioGroup
                android:id="@+id/tip_options"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkedButton="@id/tip_option_twenty_percent"
                android:orientation="vertical"
                app:layout_constraintStart_toStartOf="@id/tip_service_question"
                app:layout_constraintTop_toBottomOf="@id/tip_service_question">

                <RadioButton
                    android:id="@+id/tip_option_twenty_percent"
                    style="@style/Widget.Study_Android_Basic.CompoundButton.RadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/amazing_20" />

                <RadioButton
                    android:id="@+id/tip_option_eighteen_percent"
                    style="@style/Widget.Study_Android_Basic.CompoundButton.RadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/good_18" />

                <RadioButton
                    android:id="@+id/tip_option_fifteen_percent"
                    style="@style/Widget.Study_Android_Basic.CompoundButton.RadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/okay_15" />
            </RadioGroup>

            <ImageView
                android:id="@+id/tip_icon_round_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:importantForAccessibility="no"
                app:layout_constraintBottom_toBottomOf="@id/tip_round_uo_switch"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/tip_round_uo_switch"
                app:srcCompat="@drawable/ic_round_up" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/tip_round_uo_switch"
                style="@style/Widget.Study_Android_Basic.CompoundButton.Switch"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:checked="true"
                android:text="@string/round_up_tip"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/tip_icon_round_up"
                app:layout_constraintTop_toBottomOf="@id/tip_options" />

            <Button
                android:id="@+id/tip_calculate_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/calculate"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/tip_round_uo_switch"
                app:layout_constraintTop_toBottomOf="@id/tip_round_uo_switch" />

            <TextView
                android:id="@+id/tip_result"
                style="@style/Widget.Study_Android_Basic.TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tip_amount"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tip_calculate_button"
                tools:text="@string/tip_amount_num" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</layout>